5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1635_869.log
== TEST (2019-04-11 17:40:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$")
if(valor>=200): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- ERROR:
File "XXXX", line 5
    if(valor>=200): var = (valor - (valor*5)//100)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:40:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$")
if(valor>=200): var = (valor - (valor*5)//100))
else: var = valor
print(round(var, 2))
				  
-- ERROR:
File "XXXX", line 5
    if(valor>=200): var = (valor - (valor*5)//100))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:41:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$")
if( valor >= 200 ): var = (valor - (valor*5)//100))
else: var = valor
print(round(var, 2))
				  
-- ERROR:
File "XXXX", line 5
    if( valor >= 200 ): var = (valor - (valor*5)//100))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:41:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$")
if( valor >= 200 ): var = (valor - (valor*5)//100))
else: var = valor
print(round(var, 2))
				  
-- ERROR:
File "XXXX", line 5
    if( valor >= 200 ): var = (valor - (valor*5)//100))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:41:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$")
if( valor >= 200 ): var = (valor - (valor*5)//100))
else: var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.147486
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 5
    if( valor >= 200 ): var = (valor - (valor*5)//100))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:42:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100))
else: var = valor
print(round(var, 2))
				  
-- ERROR:
File "XXXX", line 5
    if( valor >= 200 ): var = (valor - (valor*5)//100))
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:42:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:42:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.225967
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:42:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:43:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:43:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.16513
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:43:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = int(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.198113
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/869/main.py", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '200.09'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:43:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = int(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.235264
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/869/main.py", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '200.09'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:43:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = int(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '200.09'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:46:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = int(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*100)//5)
else: var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.181931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/869/main.py", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '200.09'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:46:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = int(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*100)//5)
else: var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.235537
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/869/main.py", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '200.09'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:46:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = int(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.138012
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/869/main.py", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '200.09'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:46:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = int(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '200.09'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:47:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.128012
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:47:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.137257
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:47:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): var = (valor - (valor*5)//100)
else: var = valor
print(round(var, 2))
				  
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:47:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): 
	var = (valor - (valor*5)//100)
else: 
	var = valor
print(round(var, 2))
				  
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:47:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): 
	var = (valor - (valor*5)//100)
else: 
	var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.152327
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:47:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): 
	var = (valor - (valor*5)//100)
else: 
	var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.203031
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:47:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): 
	var = (valor - (valor*5)//100)
else: 
	var = valor
print(round(var, 2))
				  
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:48:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): 
	var = (valor - (valor*5)//100)
else: 
	var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.180078
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:49:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("valor da compra: R$"))
if( valor >= 200 ): 
	var = (valor - (valor*5)//100)
else: 
	var = valor
print(round(var, 2))
				  
-- EXECUTION TIME:
0.146255
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
